Task_53.sdk/.metadata/.plugins/org.eclipse.cdt.ui/task_53.build.log
15:50:00 **** Auto Build of configuration Debug for project task_53 ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../task_53_bsp/microblaze_0/include -mlittle-endian -mcpu=v10.0 -mxl-soft-mul -Wl,--no-relax -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:40:2: warning: 'MB_Sleep' is deprecated [-Wdeprecated-declarations]
  MB_Sleep(10);
  ^
In file included from ../src/main.c:5:0:
../../task_53_bsp/microblaze_0/include/microblaze_sleep.h:74:6: note: declared here
 void MB_Sleep(u32 MilliSeconds) __attribute__((__deprecated__));
      ^
../src/main.c:45:2: warning: 'MB_Sleep' is deprecated [-Wdeprecated-declarations]
  MB_Sleep(10);
  ^
In file included from ../src/main.c:5:0:
../../task_53_bsp/microblaze_0/include/microblaze_sleep.h:74:6: note: declared here
 void MB_Sleep(u32 MilliSeconds) __attribute__((__deprecated__));
      ^
../src/main.c: At top level:
../src/main.c:62:3: error: expected identifier or '(' before '/' token
 }*/
   ^
make: ** [src/main.o] Erro 1

15:50:00 Build Finished (took 464ms)

